# GPS-Target-Calculating-System

./: README.md  index.html
Report/: main.blg  main.tex  references.bib
Report/Contents/: ChiTietHienThuc.tex  CoSoLyThuyet.tex  DacTaChiTiet.tex  GioiThieu.tex  SaiSo.tex  ThuatToanKhac.tex  TongKet.tex  TongQuanNghienCuu.tex  YeuCauHeThong.tex
Report/Intro/: LoiCamOn.tex  TomTat.tex
Report/Outro/: TaiLieuThamKhao.tex
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/algorithms/: __init__.py  alpha_beta_filter.py  geodetics.py  kalman_filter.py  sensor_fusion.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: __init__.py  calculator.py  simulation.py
backend/app/simulation/: __init__.py  boundary.py  sensor_noise.py  target_simulator.py
backend/scripts/: ws_smoke.py
backend/tests/: benchmark_rmse.py  test_alpha_beta.py  test_geodetics.py  test_kalman.py  test_sensor_fusion.py  test_simulation_phase2.py
css/: style.css
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/charts/: AltitudeChart.jsx  ErrorMetricsChart.jsx
frontend/src/components/controls/: LayerControl.jsx  SimulationPanel.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: ComparisonPage.jsx  HomePage.jsx  StaticCalcPage.jsx  TrackingPage.jsx
frontend/src/store/: trackingStore.js
js/: benchmark.js  coordinateCalculator.js  mapViewer.js
js/algorithms/: equirectangular.js  greatCircle.js  haversine.js  lambertAzimuthal.js  vincenty.js
(+5 files in other folders)
