[project]
name = "gps-tracking-backend"
version = "2.0.0"
description = "Real-Time Moving Target Tracking System — Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "websockets==13.1",
    "numpy==2.1.3",
    "scipy==1.14.1",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
    "httpx==0.28.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
